--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es2020",
     "allowSyntheticDefaultImports": false,
+    "target": "es5",
+    "module": "esnext",
     "baseUrl": "./",
+    "moduleResolution": "node",
     "paths": {
       "@/*": ["src/*"],
       "@configs/*": ["src/configs/*"],
@@ -12,7 +14,8 @@
       "@components/*": ["src/components/*"],
       "@lib/*": ["src/lib/*"],
       "@ui/*": ["src/ui/*"]
-    }
+    },
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "exclude": ["node_modules", "dist"]
 }
